# qrc

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  environment.yml  pyproject.toml  run_all.sh
experiments/function_approx/: definition.py
experiments/image_classification/: definition.py
figures/: generate_paper_image_classification_fig.py  generate_paper_interp_fig.py  generate_paper_random_interp_fig.py
figures/figutil/: colours.css  colours.py  util.py
src/qrc/: __init__.py  _compat.py  dataset.py  encodings.py  experiments.py  filters.py  networks.py  runtime.py  simulators.py  states.py  ui.py  utils.py
src/qrc/_datasets/: __init__.py  _medmnist_info.py  medmnist.py  mnist.py
src/qrc/tools/: __init__.py  eval_classification.py  eval_tasks.py  generate_interp_data.py  parse_logfile.py  postprocess.py  run_experiments.py
test/qrc/: _int_definition.py  test_integration.py
